# dgpuj

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: cli.rs  jvm.rs  linux.rs  macos.rs  main.rs  windows.rs
